force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/CLQ_OCLQS_Configuration_Detail__c.object-meta.xml
<CustomObject>
    <label>OCLQS Configuration Detail</label>
    <nameField>
        <label>OCLQS Configuration Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCLQS Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>