force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/fields/CLQ_Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Applicable_To__c</fullName>
    <label>Applicable To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment - Center - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - Change of Administrator</fullName>
            </value>
            <value>
                <fullName>Amendment- FCC - Change of Capacity / Space</fullName>
            </value>
            <value>
                <fullName>Amendment - FCC - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - ODE - Change of Location</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Application - CC Center</fullName>
            </value>
            <value>
                <fullName>Application - FCC</fullName>
            </value>
            <value>
                <fullName>Application - ODE Program</fullName>
            </value>
            <value>
                <fullName>Quality Rating Registration</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Registration - Out of State</fullName>
            </value>
            <value>
                <fullName>Update Contact Information</fullName>
            </value>
            <value>
                <fullName>Update FCC Resident Information</fullName>
            </value>
            <value>
                <fullName>Update Facility Information</fullName>
            </value>
            <value>
                <fullName>Update On-site Contact Information</fullName>
            </value>
            <value>
                <fullName>Update Outdoor Space Information</fullName>
            </value>
            <value>
                <fullName>Amendment - ODE and Center - Change of Capacity / Space</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Update Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Application - Day Camp</fullName>
            </value>
            <value>
                <fullName>Renew Application - Day Camp</fullName>
            </value>
            <value>
                <fullName>SUTQ - Expedited Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Change of Owner Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Reinstate Rating after Temporary Closure</fullName>
            </value>
            <value>
                <fullName>Renewal - Out of State</fullName>
                <isActive>false</isActive>
                <label>Renewal - Out of State</label>
            </value>
            <value>
                <fullName>Update Day Camp</fullName>
                <isActive>false</isActive>
                <label>Update Day Camp</label>
            </value>
            <value>
                <fullName>Update In-Home Aide</fullName>
                <isActive>false</isActive>
                <label>Update In-Home Aide</label>
            </value>
            <value>
                <fullName>Update Out of State</fullName>
                <isActive>false</isActive>
                <label>Update Out of State</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>