force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/fields/CLQ_OCLQS_Configuration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OCLQS_Configuration__c</fullName>
    <label>OCLQS Configuration</label>
    <referenceTo>CLQ_OCLQS_Configuration__c</referenceTo>
    <relationshipLabel>OCLQS Configuration Details</relationshipLabel>
    <relationshipName>OCLQS_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>