force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/fields/CLQ_Program_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction_Type__c</fullName>
    <description>This field is used to identify if the OCLQS Configuration Detail is associated with a Licensing Transaction or an SUTQ Transaction</description>
    <label>Program Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>SUTQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>