force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/fields/CLQ_Standard_Detail__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Standard_Detail__c</fullName>
    <label>Standard Detail</label>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>OCLQS Configuration Details</relationshipLabel>
    <relationshipName>OCLQS_Configuration_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>