force-app/main/default/objects/CLQ_OCLQS_Configuration_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_OCLQS_Configuration__c</columns>
    <columns>CLQ_Program_Transaction_Type__c</columns>
    <columns>CLQ_Applicable_To__c</columns>
    <columns>CLQ_Standard_Detail__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>